--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 Django==4.2.1
 django-admin-sortable2==2.1.8
 django-tinymce==3.6.1
+environs==9.5.0
 Pillow==9.5.0
-python-dotenv==1.0.0
 requests==2.31.0
